# smotrim-downloader

./: .gitignore  README.md  deepseek_text_20260322_1d00f8.txt  deepseek_text_20260322_edc68d.txt  meson.build  smotrim-downloader-dbgsym_0.1.0-1_amd64.ddeb  smotrim-downloader_0.1.0-1_amd64.deb
data/: meson.build  smotrim-downloader.desktop.in
debian/: changelog  control  copyright  debhelper-build-stamp  rules  smotrim-downloader.install
debian/smotrim-downloader/DEBIAN/: control  md5sums
debian/smotrim-downloader/usr/share/applications/: smotrim-downloader.desktop
doc/: Общая архитектура.plantuml  Последовательность загрузки видео.plantuml  Потоки и сигналы.plantuml  Структура конфигурационного файл.plantuml  Структура проекта.plantuml
src/: application.vala  download_manager.vala  download_row.vala  main.vala  main_window.vala  meson.build  settings.vala  settings_dialog.vala
