executable('smotrim-downloader',
    'main.vala',
    'application.vala',
    'main_window.vala',
    'download_row.vala',
    'download_manager.vala',
    'settings.vala',
    'settings_dialog.vala',
    dependencies: [gtk, glib],
    vala_args: ['--pkg=posix'],
    install: true,
    install_dir: bindir
)